tests/types/errors/generic_escaping_variable.mochi
fun ghost<T>(x: any): T {
  return x as T
}
print(ghost(1))
